<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">my PayDay</string>
    <string name="check_details">Check Details</string>
    <string name="cmpnyid">Company ID</string>
    <string name="cmpnyNm">Company Name</string>
    <string name="emplyid">Employee ID</string>
    <string name="ckdate">Check Date</string>
    <string name="gross">Gross</string>
    <string name="fedwh">Federal WithHeld</string>
    <string name="fica">FICA</string>
    <string name="medicare">Medicare</string>
    <string name="state">State</string>
    <string name="sd">Short Term Disability</string>
    <string name="ckamnt">Check Amount</string>
    <string name="directdep">Direct Deposit</string>
    
     <style name="DefaultButtonText">
    <item name="android:layout_width">fill_parent</item>
    <item name="android:layout_height">wrap_content</item>
    <item name="android:textColor">#979797</item>
    <item name="android:gravity">center</item>
    <item name="android:layout_margin">3dp</item>
    <item name="android:textStyle">normal</item>
    <item name="android:textSize">20sp</item>
    <item name="android:shadowColor">#f9f9f9</item>
    <item name="android:shadowDx">1</item>
    <item name="android:shadowDy">1</item>
    <item name="android:shadowRadius">1</item>
    </style>

</resources>
