<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mypayday.DetailFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:text="@string/check_details"
        android:textColor="@color/white" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:weightSum="1">

      <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="168dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.07"
            android:orientation="vertical"
            android:weightSum="1" >

            <TextView
                android:id="@+id/ckamnt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ckamnt"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/gross"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/gross"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            
              <TextView
                    android:id="@+id/directdep"
                    android:layout_width="175dp"
                    android:layout_height="wrap_content"
                    android:text="@string/directdep"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/fedwh"
                    android:layout_width="179dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fedwh"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/fica"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    android:text="@string/fica"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

         

                <TextView
                    android:id="@+id/medicare"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:text="@string/medicare"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/state"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/state"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

          
          		 <TextView
                    android:id="@+id/sd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.59"
                    android:text="@string/sd"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:weightSum="1" >

            </LinearLayout>

        </LinearLayout>

       

</RelativeLayout>